--- a/main/templates/main/inc/inc_main_menu.html
+++ b/main/templates/main/inc/inc_main_menu.html
@@ -59,6 +59,7 @@
     </div>
   </div>
 </nav>
+
 <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="search"></a>
 <a href="{%url 'basket:basket'%}" class="basket">
     <span>
@@ -83,7 +84,7 @@
           </div>
       </div>
       <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Искать</button>
+          <button type="submit" class="btn btn-outline-success">Искать</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
       </div>
     </div>
