--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -27,19 +27,21 @@
                 <div class="block" style="margin-bottom: 5px; width: 330px;">
                     <div class="card" style="border: none;">
                       <a href="{%url 'products:type' type.pk%}">
-						  {%if type.name == "Потолочные светильники (люстры)"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/153fb5cc-6774-48a9-b70b-81fb1946b899/s/MOD317PL-06G_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Настольные светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/efb18e42-d74a-4adb-a6d3-672ee3516dfb/s/Z153-TL-01-BS_on_w.jpg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Напольные светильники (торшеры)"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/84cb6ecd-b24f-48b9-a888-27e3e19a0c00/s/MOD006FL-01B_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Спот"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/ebb6a448-ae01-476d-9d39-b6644a39c0e6/s/FR10006CW-L6W_on_w_standard_(1).jpeg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Настенные светильники (бра)"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/9d0f3452-ac65-40e4-b9aa-09cf5195f815/s/RC098-WL-01-R_on_w.jpg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Трековые светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/4cabde78-9fe6-4253-b49b-1cb1f67319d6/s/TR019-2-15W3K-MG_on_w_(2).jpg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Подсветка"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/979c7bc6-f608-493d-9a75-91c90e42b5f1/s/MIR014WL-L10G3K_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Встраиваемые светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/7fd94198-1bb6-4a84-9360-4ce1af76fe9f/s/DL008-2-02-W_on_w_(1).jpg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Ландшафтные светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/8d218cb6-eb68-450e-bd46-6aaedcfff166/s/O004FL-01B_on_w_(1).jpg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Светодиодные ленты"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/5a2a9665-f864-4198-9d67-a8b6f872a2fd/s/interior_ALM008S-2M_standard.jpeg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Аксессуары"%}<img src="http://www.stluce.ru/upload/images/ST015.500.98_01W.jpg" alt="{{product.name}}" height="270px">
-						  {%elif type.name == "Умный дом"%}<img src="https://elektrostandard.ru/images/catalog/zvonok-besprovodnoy-dbq01m-wl-36m-ip44-belyy-9a4400501febb2a95e79248486a5f6d3.jpg" alt="{{product.name}}" height="300px">
+						  {%if type.name == "Люстры"%}<img src="http://vokruglamp.ru/export/img/053/f71f5e22bbf4ce2753739ff84686eeb3.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Светильники"%}<img src="http://vokruglamp.ru/export/img/28a/e0749a18cbcded93fb252f6bb5683de7.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Бра и подсветки"%}<img src="http://vokruglamp.ru/export/img/682/dabdf0d03b925257862f740c70d2f383.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Трековые системы"%}<img src="http://vokruglamp.ru/export/img/075/b271e00a4e0de51bca255d84e1d40e74.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Торшеры"%}<img src="http://vokruglamp.ru/export/img/e36/ef482ef1710fbb4ddd2502353696689c.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Настольные лампы"%}<img src="http://vokruglamp.ru/export/img/697/2f07743e6ff2abf96457612acfa6699e.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Светодиодная подсветка"%}<img src="http://vokruglamp.ru/export/img/84a/ada4a41c02b7a69d6f6c470f19e17d08.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Споты"%}<img src="http://vokruglamp.ru/export/img/8ed/cb8c905bfc8e77c73d25861c37acea8c.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Электротовары"%}<img src="http://vokruglamp.ru/export/img/12f/a244f80bac3293a03b71b032e0e09ce5.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Офисное освещение"%}<img src="http://vokruglamp.ru/export/img/af1/39feb441101f100d3ef694b6c381019f.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Уличное освещение"%}<img src="http://vokruglamp.ru/export/img/db9/b5847c565f0308380cbbc6453b4c438c.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Комплектующие"%}<img src="http://vokruglamp.ru/export/img/e68/bf27785640ff217e9d1c1e3e63dfb192.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Новогодние товары"%}<img src="http://vokruglamp.ru/export/img/5cf/9edb6b9b7fc3b263b86740c635839dc4.jpeg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Лампочки"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/4d31817e-8516-4706-8570-4f2f2dda23b1/s/2428_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Предметы интерьера"%}<img src="http://vokruglamp.ru/export/img/1c1/0ec360c243d4a23244accb3d04851604.jpeg" alt="{{product.name}}" height="300px">
 						  {%endif%}
 					  </a>
                       <div class="text" style="text-align: center">
