--- a/main/templates/main/types.html
+++ b/main/templates/main/types.html
@@ -12,6 +12,7 @@
 {%endblock%}
 
 {%block content%}
+
     <div class="detalis">
         <div class="type-menu clearfix">
 			{%include 'main/inc/inc_type_menu.html'%}
@@ -23,7 +24,7 @@
         <div class="products_list">
             <div class="title clearfix">
                 <h2>
-                    Категория: "{{types.name|title}}"
+                    Категория: {{types.parent_type}} > {{types.name|title}}
                 </h2>
             </div>
             <div aria-label="Page navigation example">
@@ -44,44 +45,6 @@
                           </a>
                         </li>
                             {% endif %}
-                          <form method="get" class="search-form rounded">
-                                <label>По цене</label>
-                                от <input name="price_min" type="number" id="form-number">
-                                до <input name="price_max" type="number" id="form-number">
-                                <label>По цвету</label>
-                                <select class="form-select" aria-label="Default select example" name="color" style="width:10em;">
-                                    <optgroup label="Выбери цвет">
-                                    <option selected></option>
-                                    <option value="Черный">Черный</option>
-                                  <option value="Белый">Белый</option>
-                                  <option value="Серый">Серый</option>
-                                  <option value="Золото">Золото</option>
-                                  <option value="Желтый">Желтый</option>
-                                  <option value="Красн">Красный</option>
-                                  <option value="Корич">Кориневый</option>
-                                  <option>Хром</option>
-                                  <option>Бронза</option>
-                                  <option>Метал</option>
-                                  <option value="Серебр">Серебро</option>
-                                  <option>Латунь</option>
-                                  <option>Никель</option>
-                                  <option>Прозрачный</option>
-                                  <option>Розовый</option>
-                                    </optgroup>
-                                </select>
-                                <div>
-                                <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="sort" id="inlineRadio1" value="price">
-                                      <label class="form-check-label" for="inlineRadio1">Дешевле</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="sort" id="inlineRadio2" value="-price">
-                                      <label class="form-check-label" for="inlineRadio2">Дороже</label>
-                                    </div>
-                                <button type="submit" class="btn btn-outline-success" style="margin-left:10px">Применить</button>
-                                <button type="reset" class="btn btn-outline-success">Cбросить</button>
-                            </div>
-                            </form>
                       </ul>
                     </div>
 
@@ -129,5 +92,4 @@
                     </nav>
         </div>
     </div>
-    <div class="clr"></div>
 {%endblock%}
