--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1052,7 +1052,6 @@ html, body {
 	float: left;
 	margin-top: 118px;
 	color:  #212121;
-	font-size: 36px;
 	font-weight: 700;
 	text-align: left;
 	margin-left: 15px;
@@ -1548,7 +1547,6 @@ td:first-child {
 }
 
 .links {
-    height: 1190px;
     width: 12%;
     margin-right: 10px;
     float: left;
@@ -1830,7 +1828,7 @@ a {
 }
 
 .type-menu {
-    height:100px;
+    height:120px;
     width:100%;
     margin: 30px 0px;
 	text-decoration: none;
@@ -1904,7 +1902,30 @@ a {
     border: 1px solid green;
 }
 
-
-.search-form button {
-    display:inline;
+.search-form2 {
+    border: 2px solid rgba(0,128,0,0.3);
+    font-weight: 600;
+    color: #555 !important;
+    font-size: small;
+    text-transform: uppercase;
+    padding: 2px;
 }
+
+
+.search-form2 label{
+    width: 60%;
+    padding-left: 10%;
+}
+
+.form-check{
+    padding-left: 2px;
+}
+
+.form-chek {
+    width:50%;
+}
+.form-check .form-check-input {
+    margin-left: 1px;
+
+}
+
