--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -91,7 +91,29 @@
 
     </div>
     <div class="" style="display: flex; margin-left:10%">
-        <a href="{%url 'products:sales'%}"><img src="/static/img/акция.jpg" width="100%"></a>
-        <a href="{%url 'products:sales'%}"><img src="/static/img/апрель-st.jpg" width="70%"></a>
+        <div style="margin-top: 30px; margin-bottom: 30px">
+	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+		<a href="{%url 'products:sales'%}"><img src="/static/img/MAYTONI.jpg" width="80%" height="300px"></a>
+    </div>
+    <div class="carousel-item">
+		<a href="{%url 'products:sales'%}"><img src="/static/img/MAYTONI2.jpg" width="80%" height="300px"></a>
+    </div>
+	  <div class="carousel-item">
+		<a href="{%url 'products:sales'%}"><img src="/static/img/MAYTONI3.jpg" width="80%" height="300px"></a>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
+
     </div>
 {%endblock%}
