--- a/main/templates/main/product.html
+++ b/main/templates/main/product.html
@@ -172,25 +172,25 @@
 	{%endif%}
 	{%if product.length %}
   	<tr>
-		<td>Длина (см)</td>
+		<td>Длина (мм)</td>
 		<td>{{product.length}}</td>
 	</tr>
 	{%endif%}
 	{%if product.width%}
   	<tr>
-		<td>Ширина (см)</td>
+		<td>Ширина (мм)</td>
 		<td>{{product.width}}</td>
 	</tr>
   {%endif%}
   {%if product.height%}
   	<tr>
-		<td>Высота (см)</td>
+		<td>Высота (мм)</td>
 		<td>{{product.height}}</td>
 	</tr>
   {%endif%}
   {%if product.diameter%}
   	<tr>
-		<td>Диаметр (см)</td>
+		<td>Диаметр (мм)</td>
 		<td>{{product.diameter}}</td>
 	</tr>
   {%endif%}
