--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -6,7 +6,7 @@
 	<meta name="yandex-verification" content="12c3a995b036b74c" />
 	<title>
 		{% block title%}
-			{{title| upper}}
+			{{title}}
 		{%endblock%}
 	</title>
 	{%block css%}
