--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,7 +5,7 @@
 ландшафные, светодиодные ленты. Доставка, скидки, акции"/>
 		<div class="slider">
 			<div class="header clearfix">
-				<p class="logo">ЛУЧИ СВЕТА</p>
+				<h4 class="logo">ЛУЧИ СВЕТА</h4>
 				{%include 'main/inc/inc_main_menu.html'%}
 			</div>
 			<div class="text-slider">
