--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -1,7 +1,7 @@
 {%extends 'main/base.html'%}
 {%load static%}
 {%block menu%}
-<meta name="description" content="Каталог, продукция. Интерьерные светильники, Торшеры, Бра, Люстры, Настольные лампы, Уличное освещение,
+<meta name="description" content="Каталог, продукция. Интерьерные светильники, Люстры, Торшеры, Бра, Люстры, Настольные лампы, Уличное освещение,
 Трековый свет, Офисное освещение, Электротовары"/>
 		<div class="hero-white">
 			<div class="header clearfix">
