--- a/main/templates/main/types.html
+++ b/main/templates/main/types.html
@@ -2,7 +2,7 @@
 {%load static%}
 
 {%block menu%}
-<meta name="description" content="{{types.name}}"/>
+<meta name="description" content="{{types.name}}. Интернет магазин света. Купить люстры, светильники, торшеры, бра и тд"/>
 
     <div class="hero-white">
         <div class="header clearfix">
