--- a/main/templates/main/product.html
+++ b/main/templates/main/product.html
@@ -1,7 +1,7 @@
 {%extends 'main/base.html'%}
 {%load static%}
 {%block menu%}
-<meta name="description" content="Лучи Света. {{product.name}}, цена {{product.price}} руб"/>
+<meta name="description" content="Лучи Света. {{product.name}}, цена {{product.price}} руб. " />
 		<div class="hero-white">
 			<div class="header clearfix">
 				<p class="logo">ЛУЧИ СВЕТА</p>
