--- a/main/templates/main/sales.html
+++ b/main/templates/main/sales.html
@@ -1,7 +1,7 @@
 {%extends 'main/base.html'%}
 {%load static%}
 {%block menu%}
-<meta name="description" content="светильники (бра, торшеры, люстры, светодиодные ленты) фирмы{{category.name}}"/>
+<meta name="description" content="Скидки и акции на интерьерные светильники (люстры, бра, торшеры, настольные лампы и тд"/>
     <div class="hero-white">
         <div class="header clearfix">
 				<p class="logo">ЛУЧИ СВЕТА</p>
