--- a/main/templates/main/new.html
+++ b/main/templates/main/new.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<a href="./" >Go to downloads page</a>
+<a href="/Users/nariman/Desktop/django/taxi/main/templates" >Go to downloads page</a>
 </body>
 </html>
